cicd-output.txt
CICD log
gcc -g  -Wall -std=c99 -c float.c
In file included from /usr/include/stdlib.h:31:0,
                 from float.c:2:
/usr/lib/gcc/x86_64-linux-gnu/7/include/stddef.h:216:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘typedef’
 typedef __SIZE_TYPE__ size_t;
 ^~~~~~~
In file included from float.c:2:0:
/usr/include/stdlib.h:97:8: error: unknown type name ‘size_t’
 extern size_t __ctype_get_mb_cur_max (void) __THROW __wur;
        ^~~~~~
/usr/include/stdlib.h:539:22: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
                      ^~~~~~
                      __size_t
/usr/include/stdlib.h:541:22: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern void *calloc (size_t __nmemb, size_t __size)
                      ^~~~~~
                      __size_t
/usr/include/stdlib.h:541:38: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern void *calloc (size_t __nmemb, size_t __size)
                                      ^~~~~~
                                      __size_t
/usr/include/stdlib.h:549:36: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern void *realloc (void *__ptr, size_t __size)
                                    ^~~~~~
                                    __size_t
/usr/include/stdlib.h:818:9: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
         ^~~~~~
         __size_t
/usr/include/stdlib.h:818:25: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
         size_t __nmemb, size_t __size, __compar_fn_t __compar)
                         ^~~~~~
                         __size_t
/usr/include/stdlib.h:827:34: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                  ^~~~~~
                                  __size_t
/usr/include/stdlib.h:827:50: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern void qsort (void *__base, size_t __nmemb, size_t __size,
                                                  ^~~~~~
                                                  __size_t
/usr/include/stdlib.h:919:36: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
 extern int mblen (const char *__s, size_t __n) __THROW;
                                    ^~~~~~
                                    __size_t
/usr/include/stdlib.h:923:34: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
      const char *__restrict __s, size_t __n) __THROW;
                                  ^~~~~~
                                  __size_t
/usr/include/stdlib.h:930:8: error: unknown type name ‘size_t’
 extern size_t mbstowcs (wchar_t *__restrict  __pwcs,
        ^~~~~~
/usr/include/stdlib.h:931:32: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
    const char *__restrict __s, size_t __n) __THROW;
                                ^~~~~~
                                __size_t
/usr/include/stdlib.h:933:8: error: unknown type name ‘size_t’
 extern size_t wcstombs (char *__restrict __s,
        ^~~~~~
/usr/include/stdlib.h:934:38: error: unknown type name ‘size_t’; did you mean ‘__size_t’?
    const wchar_t *__restrict __pwcs, size_t __n)
                                      ^~~~~~
                                      __size_t
In file included from /usr/include/stdio.h:41:0,
                 from float.c:3:
/usr/include/x86_64-linux-gnu/bits/libio.h:306:3: error: unknown type name ‘size_t’
   size_t __pad5;
   ^~~~~~
/usr/include/x86_64-linux-gnu/bits/libio.h:309:67: error: ‘size_t’ undeclared here (not in a function); did you mean ‘__size_t’?
   char _unused2[15 * sizeof (int) - 4 * sizeof (void *) - sizeof (size_t)];
                                                                   ^~~~~~
                                                                   __size_t
/usr/include/x86_64-linux-gnu/bits/libio.h:337:62: error: expected declaration specifiers or ‘...’ before ‘size_t’
 typedef __ssize_t __io_read_fn (void *__cookie, char *__buf, size_t __nbytes);
                                                              ^~~~~~
/usr/include/x86_64-linux-gnu/bits/libio.h:346:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __n);
      ^~~~~~
/usr/include/x86_64-linux-gnu/bits/libio.h:467:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘_IO_sgetn’
 extern _IO_size_t _IO_sgetn (_IO_FILE *, void *, _IO_size_t);
                   ^~~~~~~~~
In file included from float.c:3:0:
/usr/include/stdio.h:295:20: error: expected declaration specifiers or ‘...’ before ‘size_t’
       int __modes, size_t __n) __THROW;
                    ^~~~~~
/usr/include/stdio.h:340:44: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int snprintf (char *__restrict __s, size_t __maxlen,
                                            ^~~~~~
/usr/include/stdio.h:344:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int vsnprintf (char *__restrict __s, size_t __maxlen,
                                             ^~~~~~
/usr/include/stdio.h:646:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
 extern size_t fread (void *__restrict __ptr, size_t __size,
               ^~~~~
/usr/include/stdio.h:652:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite’
 extern size_t fwrite (const void *__restrict __ptr, size_t __size,
               ^~~~~~
In file included from float.c:4:0:
/usr/include/string.h:43:8: error: expected declaration specifiers or ‘...’ before ‘size_t’
        size_t __n) __THROW __nonnull ((1, 2));
        ^~~~~~
/usr/include/string.h:46:56: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *memmove (void *__dest, const void *__src, size_t __n)
                                                        ^~~~~~
/usr/include/string.h:60:42: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *memset (void *__s, int __c, size_t __n) __THROW __nonnull ((1));
                                          ^~~~~~
/usr/include/string.h:63:56: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int memcmp (const void *__s1, const void *__s2, size_t __n)
                                                        ^~~~~~
/usr/include/string.h:90:48: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern void *memchr (const void *__s, int __c, size_t __n)
                                                ^~~~~~
/usr/include/string.h:125:39: error: expected declaration specifiers or ‘...’ before ‘size_t’
         const char *__restrict __src, size_t __n)
                                       ^~~~~~
/usr/include/string.h:133:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t __n) __THROW __nonnull ((1, 2));
         ^~~~~~
/usr/include/string.h:139:57: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int strncmp (const char *__s1, const char *__s2, size_t __n)
                                                         ^~~~~~
/usr/include/string.h:146:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘strxfrm’
 extern size_t strxfrm (char *__restrict __dest,
               ^~~~~~~
/usr/include/string.h:272:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘strcspn’
 extern size_t strcspn (const char *__s, const char *__reject)
               ^~~~~~~
/usr/include/string.h:276:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘strspn’
 extern size_t strspn (const char *__s, const char *__accept)
               ^~~~~~
/usr/include/string.h:384:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘strlen’
 extern size_t strlen (const char *__s)
               ^~~~~~
Makefile:20: recipe for target 'float.o' failed
make: *** [float.o] Error 1
BUILD ERROR
